# enterprise-multi-agent-copilot

./: README.md  problem statement
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/agents/: base.py
backend/app/agents/data_analysis/: eda.py  insights.py  node.py  schemas.py
backend/app/agents/forecast/: narrative.py  node.py  schemas.py  service.py
backend/app/agents/mail/: node.py  schemas.py  service.py
backend/app/agents/memory/: service.py
backend/app/agents/planner/: prompts.py  schemas.py  service.py
backend/app/agents/python_exec/: codegen.py  node.py  sandbox.py  schemas.py
backend/app/agents/rag/: ingest.py  node.py  retrieve.py  schemas.py
backend/app/agents/report/: markdown_report.py  node.py  pdf_export.py  pptx_export.py  schemas.py
backend/app/api/: deps.py
backend/app/api/routes/: artifacts.py  chat.py  conversations.py  files.py  health.py
backend/app/api/schemas/: artifact.py  conversation.py  file.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  crud.py  init_db.py  models.py
backend/app/graph/: builder.py  router.py  state.py
backend/app/graph/nodes/: load_memory_node.py  planner_node.py  save_memory_node.py  synthesize_node.py
backend/app/llm/: factory.py
backend/app/utils/: files.py  ids.py
backend/app/vectorstore/: chroma_client.py
backend/scripts/: debug_smtp_server.py  seed_sample_files.py  smoke_test.py  smoke_test_extra.py  smoke_test_mail_forecast.py  smoke_test_memory.py
backend/scripts/sample_data/: sample.csv
frontend/: package-lock.json  (+1 more)
(+14 files in other folders)
