[project]
name = "multi-agent-copilot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "kaleido>=1.3.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.7",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "markdown2>=2.5.5",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "psutil>=7.2.2",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "python-pptx>=1.0.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.50.0",
    "xhtml2pdf>=0.2.17",
]

[dependency-groups]
dev = [
    "aiosmtpd>=1.4.6",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
